Implement the following correction  - Compatible with personium v1.5.2

--- a/src/genki.html
+++ b/src/genki.html
@@ -90,6 +90,9 @@
           <div class="modal-body">
             <select id="requestCells"></select>
             <button id="bSendAllowed">送信</button>
+            <span class="popupAlertArea" style="color:red">
+                <aside id="popupSendAllowedErrorMsg"></aside>
+            </span>
           </div>
           <div class="modal-footer">
             
