--- a/src/genkiPhoto.html
+++ b/src/genkiPhoto.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <h1><span id="photoTitle" data-i18n="glossary:photosOfMealsOf"></span></h1>
-    <a id="MigrationGenki" href="#" onclick="dispPhoto();return false;">
+    <a id="updateGenki" href="#" onclick="dispPhoto();return false;">
       <img id="reloadIcon" src="./image/parts_ico_reload.png" alt="user">
     </a>
   </header>
