--- a/src/genki.html
+++ b/src/genki.html
@@ -21,7 +21,7 @@
 <body>
   <header>
     <h1 data-i18n="glossary:calorieSmileCollaboration"></h1>
-    <a id="MigrationGenki" href="#" onclick="cs.getGenkikunData();return false;">
+    <a id="updateGenki" href="#" onclick="cs.getGenkikunData();return false;">
       <img id="reloadIcon" src="./image/parts_ico_reload.png" alt="user">
     </a>
     <a href="#" onclick="cs.openSlide();">
