Add CSS style and disable the button when nothing to be selected
Closes #31

--- a/src/genki.html
+++ b/src/genki.html
@@ -76,7 +76,7 @@
         </div>
         <div class="modal-body">
           <select id="otherAllowedCells"></select>
-          <button id="bReadAnotherCell" data-i18n="glossary:menu.lookAtOtherPhotos.btn"></button>
+          <button type="button" class="btn btn-primary" id="bReadAnotherCell" data-i18n="glossary:menu.lookAtOtherPhotos.btn" disabled></button>
         </div>
         <div class="modal-footer">
           
@@ -93,7 +93,7 @@
         </div>
         <div class="modal-body">
           <select id="requestCells"></select>
-          <button id="bSendAllowed" data-i18n="glossary:menu.sendReadPermissionRequest.btn"></button>
+          <button type="button" class="btn btn-primary" id="bSendAllowed" data-i18n="glossary:menu.sendReadPermissionRequest.btn" disabled></button>
           <span class="popupAlertArea" style="color:red">
               <aside id="popupSendAllowedErrorMsg"></aside>
           </span>
