Add name attribute (same as Calorie Smile's home page) to login page

--- a/src/login.html
+++ b/src/login.html
@@ -28,10 +28,10 @@
     <form onSubmit="manualLogin();return false;">
       <div class="login-form-controls">
         <div>
-          <input id="iGenkikunId" type="text" data-i18n="[placeholder]login:id" value="">
+          <input id="iGenkikunId" name="user" type="text" data-i18n="[placeholder]login:id" value="">
         </div>
         <div>
-          <input id="iGenkikunPw" type="password" data-i18n="[placeholder]login:password" value="">
+          <input id="iGenkikunPw" name="pass" type="password" data-i18n="[placeholder]login:password" value="">
         </div>
         <div>
           <button type="submit" class="login_btn round-btn" id="register" data-i18n="glossary:linkBtn"></button>
